<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_market"
        android:enabled="true"
        android:title="@string/Market"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_hospital"
        android:enabled="true"
        android:title="@string/Emergency_Room"
        android:icon="@drawable/ic_baseline_local_hospital_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_restaurant"
        android:enabled="true"
        android:title="@string/Food"
        android:icon="@drawable/ic_baseline_restaurant_24"
        app:showAsAction="ifRoom"
        />


</menu>