<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPlace">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo"
            android:src="@drawable/ic_baseline_image_24"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/place_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/place_address"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/place_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/place_open_hour"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="@string/hours_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <RatingBar
                android:id="@+id/ratingBar"
                android:max="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_show_map"
                android:text="@string/show_on_map"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:background="?android:attr/windowBackground"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view"
                android:layout_below="@+id/toolbar"
                android:layout_above="@+id/bottom"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottom"
                android:background="#fff"
                android:padding="4dp"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/image_profile"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image_profile"
                    android:hint="Add a comment..."
                    android:id="@+id/add_comment"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:layout_toLeftOf="@id/post"/>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/post"
                    android:text="POST"
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorPrimary"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>